--- a/contact-us.html
+++ b/contact-us.html
@@ -52,14 +52,15 @@
 						Contact us and we will assist you immediately</span>
 					</p>
 					<p>
-						Telephone/WhatsApp: 33 3633 1037
-						<br>
-						Email: contacto@latlapaleriadeocc.com.mx
+						<strong>Telephone/WhatsApp:</strong> 33 3633 1037
+						<br><br>
+						<strong>Email:</strong> contacto@latlapaleriadeocc.com.mx
 					</p>
 				</div>
 				<div class="col-lg-7">
 					<form  action="#" method="post">
 						<fieldset class="message-form">
+							<legend>Or write us right here:</legend>
 							<label>
 								Name: <input type="text" name="name" placeholder="Name" id="txt1" onclick="clean()">
 							</label>
@@ -72,7 +73,7 @@
 								Message:<textarea name="comments" id="txt3" onclick="clean()"></textarea>
 							</label>
 							<br>
-							<fieldset id="send-message"></fieldset>
+							<div id="send-message"></div>
 						</fieldset>
 						<input class="btn" type="button" name="submit" value="SEND MESSAGE" onclick="message()">
 					</form>
