--- a/products.html
+++ b/products.html
@@ -51,21 +51,21 @@
 					<h2>HARDWARE SUPPLIES</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin feugiat arcu eu sapien egestas rhoncus. Integer varius augue augue, in volutpat orci viverra vel. Quisque placerat eros quam, sed accumsan libero vulputate tempor. Donec vel urna eget ex fermentum auctor id a magna. Duis ut odio vitae quam iaculis gravida.
 					</p>
-					<img src="img/tools-1024x576.jpg" alt="tools" class="img-products">
+					<img src="img/tools-1024x576.jpg" alt="hardware tools" class="img-products">
 					<div class="hidden-lg"><br><br></div>
 				</div>
 				<div class="col-lg-4">
 					<h2>PAINTING SUPPLIES</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin feugiat arcu eu sapien egestas rhoncus. Integer varius augue augue, in volutpat orci viverra vel. Quisque placerat eros quam, sed accumsan libero vulputate tempor. Donec vel urna eget ex fermentum auctor id a magna. Duis ut odio vitae quam iaculis gravida.
 					</p>
-					<img src="img/painting-supplies-1024x576.jpg" alt="tools" class="img-products">
+					<img src="img/painting-supplies-1024x576.jpg" alt="painting supplies" class="img-products">
 					<div class="hidden-lg"><br><br></div>
 				</div>
 				<div class="col-lg-4">
 					<h2>CLEANING PRODUCTS</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin feugiat arcu eu sapien egestas rhoncus. Integer varius augue augue, in volutpat orci viverra vel. Quisque placerat eros quam, sed accumsan libero vulputate tempor. Donec vel urna eget ex fermentum auctor id a magna. Duis ut odio vitae quam iaculis gravida.
 					</p>
-					<img src="img/cleaning-supplies-1024x576.jpg" alt="tools" class="img-products">
+					<img src="img/cleaning-supplies-1024x576.jpg" alt="cleaning products" class="img-products">
 				</div>
 			</div>
 		</div>
