--- a/products.html
+++ b/products.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-	<header>
+	<header class="fixed-top">
 		<div class="container-fluid">
 			<div class="row container-title">
 				<h1>LA TLAPALERIA<br><span id="ths">HARDWARE STORE</span></h1>
