--- a/contact-us.html
+++ b/contact-us.html
@@ -96,7 +96,7 @@
 			</div>
 		</div>
 	</main>
-	<footer>
+	<footer
 		<div class="container-fluid">
 			<div class="row">
 				<nav class="footer-nav">
