--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		</nav>
 	</header>
 	<main>
-		<div class="container-fluid no-padding">
+		<div class="container-fluid">
 			<div class="row">
 				<div id="carouselIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
 					<ol class="carousel-indicators">
