--- a/products.html
+++ b/products.html
@@ -40,7 +40,7 @@
 		</nav>
 	</header>
 	<main>
-		<div class="container-fluid no-padding">
+		<div class="container-fluid">
 			<div class="row">
 				<img src="img/image044-1.jpg" alt="many tools">
 			</div>
