--- a/products.html
+++ b/products.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>La Tlapalería Products</title>
+    <title>La Tlapaleria Products</title>
 
      <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -81,8 +81,8 @@
 					</ul>
 				</nav>
 				<div class="row">
-					<small>&copy; La Tlapalería Hardware Store</small> <br>
-					<small>La Tlapalería Hardware Store is a registered trademark owned by Tlapalería Arcos de Occidente S.A. de C.V.</small>
+					<small>&copy; La Tlapaleria Hardware Store</small> <br>
+					<small>La Tlapaleria Hardware Store is a registered trademark owned by Tlapaleria Arcos de Occidente S.A. de C.V.</small>
 				</div>
 			</div>
 		</div>
