--- a/contact-us.html
+++ b/contact-us.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>La Tlapalería Products</title>
+    <title>La Tlapaleria Contact</title>
 
      <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -83,7 +83,7 @@
 				<div class="col-lg-5">
 					<h2>STORE LOCATION</h2>
 					<p>
-						La Milpa 496, El Vigía
+						La Milpa 496, El Vigia
 						<br>
 						45140 Zapopan, Jal.
 					</p>
@@ -96,7 +96,7 @@
 			</div>
 		</div>
 	</main>
-	<footer
+	<footer>
 		<div class="container-fluid">
 			<div class="row">
 				<nav class="footer-nav">
@@ -107,8 +107,8 @@
 					</ul>
 				</nav>
 				<div class="row">
-					<small>&copy; La Tlapalería Hardware Store</small> <br>
-					<small>La Tlapalería Hardware Store is a registered trademark owned by Tlapalería Arcos de Occidente S.A. de C.V.</small>
+					<small>&copy; La Tlapaleria Hardware Store</small> <br>
+					<small>La Tlapaleria Hardware Store is a registered trademark owned by Tlapaleria Arcos de Occidente S.A. de C.V.</small>
 				</div>
 			</div>
 		</div>
